--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,16 @@
 .product-img {
   max-width: 90%;
 }
+.blob-background{
+  background-image: url("./pic/blobanimation.svg");
+  background-size:contain;
+  scroll-behavior: smooth;
+}
+.blob-background-cover{
+  background-image: url("./pic/blobanimation.svg");
+  background-size:cover;
+  scroll-behavior: smooth;
+}
 
 .benifits {
   background-color: #f7f8fa;
@@ -31,10 +41,10 @@ a {
   text-decoration: none;
 }
 .footer-title {
-  color: #5676b2;
+  color: #FEF7FF;
 }
 .color-blue {
-  color: #5676b2 !important;
+  color: #FEF7FF !important;
 }
 
 .over-flow-auto {
@@ -46,7 +56,7 @@ a {
 
 .wrapper {
   width: 100%;
-height: 100%;
+  height: 100%;
   max-height: 200px;
   overflow-y: auto !important;
 }
@@ -161,3 +171,24 @@ p {
   z-index: 100;
 }
 
+.transition-appear {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.transition-appear.active {
+  opacity: 1;
+}
+.footer-holder{
+  background-color: #61458A;
+}
+.user-pass{
+  text-transform: lowercase !important;
+}
+.empty-cart{
+  background-image: url("./pic/empty-cart.svg");
+  background-size:contain;
+  width: 500px;
+  height: 500px;
+  
+}
