--- a/src/app.css
+++ b/src/app.css
@@ -195,3 +195,17 @@ p {
   background-image: url("./pic/popular-bg.svg");
   background-size: cover;
 }
+.products-category-btn {
+  transition: all 0.3s ease-in-out;
+}
+.products-category-btn:hover {
+  scale: 1.2;
+  font-weight: bold;
+  /* background: rgb(247, 247, 249);
+  background: linear-gradient(
+    90deg,
+    rgba(250, 250, 250, 0.0) 0%,
+    rgba(165, 54, 179, 0.6979581261215424) 50%,
+    rgba(250, 250, 250, 0.0) 100%
+  ); */
+}
