--- a/src/app.css
+++ b/src/app.css
@@ -93,8 +93,10 @@ p {
   bottom: 0;
   margin-top: 18px;
   display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
-.card-btn{
+.card-btn {
   background: #61458a;
 }
 
@@ -102,8 +104,7 @@ p {
   border: none;
   text-wrap: nowrap;
   text-align: center;
-  padding: 12px 24px;
-  border-radius: 24px;
+  padding: 12px;
   font-size: 12px;
   font-size: 0.8rem;
   letter-spacing: 2px;
@@ -177,16 +178,17 @@ p {
   background-size: cover;
 }
 .products-category-btn {
-  transition: all 0.3s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  z-index: 3;
 }
 .products-category-btn:hover {
   scale: 1.2;
-  font-weight: bold;
-  /* background: rgb(247, 247, 249);
-  background: linear-gradient(
-    90deg,
-    rgba(250, 250, 250, 0.0) 0%,
-    rgba(165, 54, 179, 0.6979581261215424) 50%,
-    rgba(250, 250, 250, 0.0) 100%
-  ); */
+  font-weight: 650;
+  background: rgb(247, 247, 249);
+  background: radial-gradient(
+    circle,
+    rgba(247, 247, 249, 0.15) 0%,
+    rgba(165, 54, 179, 0.5999189104352678) 0%,
+    rgba(247, 247, 249, 0) 61%
+  );
 }
