--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,15 @@
   width: 100%;
   max-height: 50px;
 }
+.header {
+  background: rgb(223, 198, 194);
+  background: linear-gradient(
+    90deg,
+    rgba(223, 198, 194, 0.5) 0%,
+    rgb(255, 255, 255) 46%,
+    rgba(214, 185, 182, 0.5) 100%
+  );
+}
 .header-logo {
   object-fit: contain;
   max-width: 20%;
@@ -178,17 +187,38 @@ p {
   background-size: cover;
 }
 .products-category-btn {
-  transition: all 0.4s ease-in-out;
+  transition: all 0.2s ease-in-out;
   z-index: 3;
 }
 .products-category-btn:hover {
   scale: 1.2;
-  font-weight: 650;
-  background: rgb(247, 247, 249);
-  background: radial-gradient(
-    circle,
-    rgba(247, 247, 249, 0.15) 0%,
-    rgba(165, 54, 179, 0.5999189104352678) 0%,
-    rgba(247, 247, 249, 0) 61%
+  font-weight: 550;
+  background: rgb(211, 182, 214);
+  background: linear-gradient(
+    90deg,
+    rgba(211, 182, 214, 0) 0%,
+    rgba(211, 182, 214, 0.6) 50%,
+    rgba(211, 182, 214, 0) 100%
   );
+}
+
+.header-btn {
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #624556;
+  transition: all 0.5s ease-in;
+}
+.header-btn:hover{
+  scale: 1.1; 
+
+}
+.cartlist-delete-btn{
+  transition: all 0.3s ease-in 0.3s ;
+}
+.cartlist-delete-btn:hover{
+scale: 1.2;
+rotate: 90deg;
+}
+.comment-user-img{
+  border-radius: 150px; 
 }
