--- a/src/app.css
+++ b/src/app.css
@@ -40,16 +40,15 @@
 .comments {
   background: rgba(56, 63, 86, 0.1);
 }
-.comments-opinion-tex{
+.comments-opinion-tex {
   max-height: 80px !important;
   overflow-y: auto !important;
-
 }
 .comments-card {
   aspect-ratio: 1/1;
   max-width: 355px;
 }
-.card-height{
+.card-height {
   max-height: 150px;
 }
 a {
@@ -72,19 +71,26 @@ a {
 .wrapper {
   height: 100%;
 
-  max-height: 210px;
+  max-height: 255px;
   overflow-y: auto !important;
+  overflow-x: hidden;
 }
 
 .banner-image {
   background-image: url(https://images.unsplash.com/photo-1641326201918-3cafc641038e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80);
   background-position: center;
   background-size: cover;
-  height: 300px;
   width: 100%;
+  height: 100%;
 
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.255);
+}
+.image-wrapper {
+  min-width: 200px;
+  min-height: 200px;
+  height: 200px;
+  width: 100%;
 }
 
 h1 {
@@ -181,9 +187,14 @@ p {
 }
 .empty-cart {
   background-image: url("./pic/empty-cart.svg");
+  background-position: center;
   background-size: contain;
-  width: 500px;
-  height: 500px;
+  background-repeat: no-repeat;
+  max-width: 500px;
+  max-height: 500px;
+
+  min-height: 200px;
+  min-width: 200px;
 }
 .popular {
   background-image: url("./pic/popular-bg.svg");
@@ -211,17 +222,20 @@ p {
   color: #624556;
   transition: all 0.5s ease-in;
 }
-.header-btn:hover{
-  scale: 1.1; 
-
+.header-btn:hover {
+  scale: 1.1;
 }
-.cartlist-delete-btn{
-  transition: all 0.3s ease-in 0.3s ;
+.cartlist-delete-btn {
+  transition: all 0.3s ease-in 0.3s;
 }
-.cartlist-delete-btn:hover{
-scale: 1.2;
-rotate: 90deg;
+.cartlist-delete-btn:hover {
+  scale: 1.2;
+  rotate: 90deg;
 }
-.comment-user-img{
-  border-radius: 150px; 
+.comment-user-img {
+  border-radius: 150px;
+}
+@media screen and (max-width: 576px) {
+  .products-cats-btn-holder > div {
+  }
 }
